--- a/Snake Game/style.css
+++ b/Snake Game/style.css
@@ -13,6 +13,7 @@ html, body{
     /* Background colors */
     --bg-primary-color: #0c0c0c;
     --bg-fill-color: #fdfdfc;
+    --bg-food-color: #ff3b3b;
 
     /* Text color */
     --text-primary-color: #f0f0f0;
@@ -47,6 +48,18 @@ html{
 main, section{
     width:100%;
     height: 100%;
+}
+
+.btn{
+    padding: var(--spacing-sm) var(--spacing-md);
+    border: none;
+    border-radius: var(--border-radius-sm);
+    cursor: pointer;
+    transition: all 0.3s ease;
+}
+
+.btn:hover{
+    transform: scale(1.1);
 }
 
 section{
@@ -86,4 +99,31 @@ section .infos{
 
 .fill{
     background-color: var(--bg-fill-color);
+}
+
+.food{
+    background-color: var(--bg-food-color);
+}
+
+.modal{
+    height: 100vh;
+    width: 100vw;
+    position: fixed;
+    top: 0;
+    background-color: #35353587;
+    backdrop-filter: blur(4px);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.modal .start-game, .modal .game-over{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: var(--spacing-lg);
+}
+
+.modal .game-over{
+    display: none;
 }
