Completed the project

--- a/Kanban Board (Progress Tracker)/style.css
+++ b/Kanban Board (Progress Tracker)/style.css
@@ -54,8 +54,10 @@ nav{
     display: flex;
     align-items: center;
     justify-content: space-between;
-    /* border: 1px solid white;
-    border-radius: 10px; */
+    position: sticky;
+    top: 0;
+    background-color: var(--bg-color);
+    border-bottom: 1px solid var(--bg-task-color);
 }
 
 nav button{
@@ -79,6 +81,7 @@ section{
 section .task-column{
     background-color: var(--bg-button-color);
     flex-grow: 1;
+    width: 100%;
     padding: var(--padding-m);
     display: flex;
     flex-direction: column;
